# Bit-C-Compiler

./: .gitignore  CMakeLists.txt  README.md
examples/arithmetic/: arithmetic  arithmetic.s
examples/conditional/: conditional  conditional.c  conditional.s
examples/minimal/: minimal.c  minimal.s
examples/ret/: ret  ret.c  ret.s
examples/return/: return.s
examples/txt/: sentence.txt
src/common/: file_utils.hpp  paths.hpp  timer.hpp
src/compiler/: ast.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  main.cpp  optimizer.cpp  optimizer.hpp  parser.cpp  parser.hpp  token.hpp
tests/: testbench.hpp
tests/common/: file_utils_tests.cpp
tests/compiler/: codegen_tests.cpp  compiler_tests.cpp  lexer_tests.cpp  optimizer_tests.cpp  parser_tests.cpp
tests/compiler/data/: all_tokens.c  all_tokens.txt
